--- a/2.Classification/2.3 Support Vector Machine/Readme
+++ b/2.Classification/2.3 Support Vector Machine/Readme
@@ -1,1 +1,3 @@
-2.3 Support Vector Machine
+### 2.3 Support Vector Machine (SVM)
+- **Goal**: Find the best line (or hyperplane) that separates two classes.
+- **Works well with**: Clear margin of separation between classes.
