--- a/7.Deep Learning/1.ANN/artificial_neural_network.ipynb
+++ b/7.Deep Learning/1.ANN/artificial_neural_network.ipynb
@@ -434,6 +434,36 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "by default is the **Adam Optimizer**, which is a very performance optimizer that can perform stochastic gradient descent.\n",
+        " what stochastic gradient descent allows to do.\n",
+        " it is what will update the weights in order to reduce the loss error between your predictions\n",
+        "and the real results\n",
+        "\n",
+        "**loss function**, which is the way to\n",
+        "compute the difference between the predictions\n",
+        "and the real results.\n",
+        "\n",
+        " if you were **doing non-binary classification.**\n",
+        "You know, like for example\n",
+        "predicting three different categories while here\n",
+        "you would have to enter a category called **cross entropy loss** when doing non-binary classification\n",
+        "**when predicting more than two categories**\n",
+        "while the **activation should not be sigmoid**,\n",
+        "but **soft max**\n",
+        "\n",
+        "the list of the different **metrics**\n",
+        "with which you want to evaluate your ANN\n",
+        "during the training, but we will only choose the main one.\n",
+        "You know, the most essential one\n",
+        "which is the **accuracy** and which you have to enter in quotes."
+      ],
+      "metadata": {
+        "id": "fSIKNPQ0ae1b"
+      }
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "fG3RrwDXZEaS"
@@ -452,6 +482,38 @@
       "source": [
         "### Training the ANN on the Training set"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "the **batch size.**\n",
+        "\n",
+        "Because indeed batch learning is always more efficient and\n",
+        "more performance when training an artificial neural network.\n",
+        "Meaning that instead of comparing your prediction\n",
+        "to the real result, one by one, you know\n",
+        "to compute and reduce the loss, well\n",
+        "you are gonna do that with several predictions compared\n",
+        "to several real results into a batchAnd the batch size here, you know the **batch size** parameter gives exactly the **number of predictions** you want to have in the batch to be compared to that same number of real results.\n",
+        "\n",
+        "And the classic value\n",
+        "of the batch size that is usually chosen is 32, right?\n",
+        "If you don't want to spend too much time tuning this hyper parameter well I recommend to choose the default value 32.\n",
+        "\n",
+        " a neural network has to be trained\n",
+        "over a certain amount of **epics**\n",
+        "so has to improve the accuracy over time.\n",
+        "So we can just take 100 epics.\n",
+        "\n",
+        "your new network needs a certain amount\n",
+        "of epics in order to learn properly, you know\n",
+        "learn the correlations to get the ultimate best predictions.And the final accuracy we get on the training set\n",
+        "we'll have to check the same on the test set\n",
+        "is averaging around 0.86. That means that out of 100 observations you have 86 correct predictions."
+      ],
+      "metadata": {
+        "id": "XsRWm60veti4"
+      }
     },
     {
       "cell_type": "code",
@@ -749,6 +811,55 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**sc.transform** for standardization which it learn from x-test in feature scaling step\n",
+        "\n",
+        "that this customer leaves the bank is 0.04, you know,\n",
+        "And therefore it is predicted that this customer has a very\n",
+        "low chance to leave the bank. **{ get 0.4 by removing > 0.5}**\n",
+        "\n",
+        "And if **you don't want** the outcome in the form\n",
+        "of a **probability**, well the trick\n",
+        "You just need to add here, **\" > 0.5 \"**, why is that?\n",
+        "\n",
+        "and then oh 0.5, why is that?\n",
+        " ANN predict the SC transformed and all the informations\n",
+        "of the customers up to here returns exactly\n",
+        "the predicted probability.\n",
+        "\n",
+        "And here we choose a threshold of 0.5\n",
+        "to say that if that predicted probability\n",
+        "is larger than 0.5, well, we will consider the final result to be one, right?\n",
+        "\n",
+        "Because the predicted probability\n",
+        "that the outcome is one is larger than 0.5,\n",
+        "meaning that there is more\n",
+        "than 50% chance that the predicted outcome is one.\n",
+        "So we'll consider it to be one.\n",
+        "\n",
+        "And however, if the predictive probability\n",
+        "that the customer leaves the bank is below 0.5,\n",
+        "well, we will consider it to be zero.\n",
+        "\n",
+        "Of course, **you can choose a different value**\n",
+        "of the threshold, especially when you have critical outcome\n",
+        "you know, for a critical decision,\n",
+        "and in that case, you can, for example,\n",
+        "increase the threshold.\n",
+        "\n",
+        "This totally makes sense for our case study.\n",
+        "And therefore, now if we re-execute this sale,\n",
+        "we will of course get the final outcome,\n",
+        "which will be of course, **zero or false**.\n",
+        "\n",
+        " the customer won't leave the bank."
+      ],
+      "metadata": {
+        "id": "PK61Zol3gtZz"
+      }
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "2d8IoCCkeWGL",
@@ -787,12 +898,46 @@
     },
     {
       "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "icdi5FPDlXeB"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "u7yx47jPZt11"
       },
       "source": [
         "### Predicting the Test set results"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Reshape**\n",
+        "\n",
+        "- y_pred.reshape(len(y_pred),1): Converts y_pred into a column vector.\n",
+        "- y_test.reshape(len(y_test),1): Converts y_test into a column vector.\n",
+        "\n",
+        "**Concatenation**\n",
+        "- np.concatenate((...), 1): Joins these two column vectors horizontally (along axis 1).\n",
+        "- This results in a 2D array where each row contains [predicted value, actual value].\n",
+        "\n",
+        "### Dummy data\n",
+        "y_pred = np.array([0.9, 0.2, 0.7])\n",
+        "\n",
+        "y_test = np.array([1, 0, 1])\n",
+        "\n",
+        "### outPut\n",
+        "\n",
+        "[[0.9  1 ]\n",
+        " [0.2  0 ]\n",
+        " [0.7  1 ]]"
+      ],
+      "metadata": {
+        "id": "Jhb4AoKSlYhl"
+      }
     },
     {
       "cell_type": "code",
