--- a/7.Deep Learning/3.ANN (Regression Problem)/Artificial_Neural_Network.ipynb
+++ b/7.Deep Learning/3.ANN (Regression Problem)/Artificial_Neural_Network.ipynb
@@ -243,6 +243,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "We are doing regression and therefore the loss.\n",
+        "\n",
+        "As for any **regression** task, should be the **mean squared error** or the root mean squared error.\n"
+      ],
+      "metadata": {
+        "id": "A4kCtla8tEWw"
+      }
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "pesgbWlCAtB4"
@@ -505,6 +516,17 @@
       "source": [
         "### Predicting the results of the Test set"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        " np.set_printoptions(precision=2)\n",
+        "- This formats the printed output by setting the precision to 2 decimal places.\n",
+        "- It ensures that when printing numerical values, only two decimal places are displayed.\n"
+      ],
+      "metadata": {
+        "id": "XMakTuihuEOj"
+      }
     },
     {
       "cell_type": "code",
