--- a/1.Regression/1.Simple Linear Regression/Simple Linear Reg.ipynb
+++ b/1.Regression/1.Simple Linear Regression/Simple Linear Reg.ipynb
@@ -20,7 +20,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/MuhammadMaazKhan/Machine-Learning/blob/main/Regression/Simple%20Linear%20Regression/toolkit.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/MuhammadMaazKhan/Machine-Learning/blob/main/1.Regression/1.Simple%20Linear%20Regression/Simple%20Linear%20Reg.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -208,6 +208,17 @@
       "source": [
         "## Visualising the Test set results"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- plt.plot(X_train, regressor.predict(X_train), color='blue'): This plots the regression line using the trained model’s predictions on the training data.\n",
+        "\n",
+        "Since the regression model is trained using X_train, the regression line reflects how well the model fits the training data. The scatter points for X_test are used to visually compare how the model generalizes to unseen data."
+      ],
+      "metadata": {
+        "id": "7HN2ic1YpKHa"
+      }
     },
     {
       "cell_type": "code",
