--- a/1.Regression/2.Multiple Linear Regression/multiple_linear_regression.ipynb
+++ b/1.Regression/2.Multiple Linear Regression/multiple_linear_regression.ipynb
@@ -20,7 +20,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/MuhammadMaazKhan/Machine-Learning/blob/main/Regression/Multiple%20Linear%20Regression/multiple_linear_regression.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/MuhammadMaazKhan/Machine-Learning/blob/main/1.Regression/2.Multiple%20Linear%20Regression/multiple_linear_regression.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -314,6 +314,33 @@
       "source": [
         "## Predicting the Test set results"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- **np.set_printoptions(precision=2)**\n",
+        "This sets the print precision for NumPy arrays to 2 decimal places. This means whenever you print a NumPy array, its floating-point values will be rounded to two decimal places for better readability.\n",
+        "\n",
+        "- **y_pred.reshape(len(y_pred), 1)**\n",
+        "y_pred is the array of predicted values from your model.\n",
+        "\n",
+        "**.reshape(len(y_pred), 1)** converts it into a column vector (i.e., from shape (n,) to (n,1)), which is necessary for concatenation.\n",
+        "\n",
+        "- **y_test.reshape(len(y_test), 1)**\n",
+        "y_test contains actual target values.\n",
+        "\n",
+        "Similarly, reshaping it into a column vector makes it easier to concatenate.\n",
+        "\n",
+        "- **np.concatenate((y_pred.reshape(len(y_pred),1), y_test.reshape(len(y_test),1)), 1)**\n",
+        "This combines (concatenates) y_pred and y_test horizontally (axis=1), meaning:\n",
+        "\n",
+        "[ predicted_value  actual_value ]\n",
+        "[ predicted_value  actual_value ]\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "4HTXQIXUqEXs"
+      }
     },
     {
       "cell_type": "code",
