--- a/1.Regression/3.Polynomial Regression/polynomial_regression.ipynb
+++ b/1.Regression/3.Polynomial Regression/polynomial_regression.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -20,7 +19,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/MuhammadMaazKhan/Machine-Learning/blob/main/Regression/3.Polynomial%20Regression/polynomial_regression.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/MuhammadMaazKhan/Machine-Learning/blob/main/1.Regression/3.Polynomial%20Regression/polynomial_regression.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -126,6 +125,42 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "### **What does \"Degree = 4\" mean?**\n",
+        "When you're working with regression models, a **degree 4 polynomial** means the equation includes terms up to **x⁴** (x to the fourth power). Instead of drawing a straight line through the data, the model can bend and curve **four times** to better match patterns.\n",
+        "\n",
+        "Imagine you're trying to draw a road that fits the landscape. A straight road (linear regression) might not follow all the hills and valleys properly. But if you allow the road to curve **more times**, it can follow the terrain better. A **degree-4 polynomial regression** lets the model make more complex bends, creating a closer fit to your data.\n",
+        "\n",
+        "So the equation will look something like:\n",
+        "\n",
+        "\\[\n",
+        "y = b_0 + b_1x + b_2x^2 + b_3x^3 + b_4x^4\n",
+        "\\]\n",
+        "\n",
+        "Each term (x², x³, x⁴) helps capture more detail in the patterns of your data.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "### **Why do we need Linear Regression after PolynomialFeatures?**\n",
+        "Think of **PolynomialFeatures** as a tool that **creates** extra features (new columns) by raising x to different powers (x², x³, x⁴). But **PolynomialFeatures** doesn't actually figure out the best values for \\( b_0, b_1, b_2, \\) etc.—it just prepares the data.\n",
+        "\n",
+        "Then, another LinearRegression model (lin_reg_2) is trained on X_poly to learn the polynomial relationship.\n",
+        "Once we have these new features, we still need a machine learning model to **find the best-fitting equation**. That's where **LinearRegression** comes in—it looks at the\n",
+        " transformed data and figures out the best values for each coefficient.\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "XWnZNi1Ss3I6"
+      }
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "HYplp4pTEm0O",
@@ -166,6 +201,22 @@
       "source": [
         "## Visualising the Linear Regression results"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**X =** Ind values **Y =** Dep Values\n",
+        "\n",
+        "**X =** Ind Values  **lin_reg.predict(X)** = Predict Dep Values(Predicted_y)  \n",
+        "\n",
+        "**plt.scatter(X, y, color='red')** plots the real data points (**actual salaries**).\n",
+        "\n",
+        "**plt.plot(X, lin_reg.predict(X), color='blue')** plots the **predicted salaries** as a straight line.\n",
+        "   - If you used y this would only connect the actual data points"
+      ],
+      "metadata": {
+        "id": "H081OqNLxWKr"
+      }
     },
     {
       "cell_type": "code",
@@ -210,6 +261,18 @@
       "source": [
         "## Visualising the Polynomial Regression results"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**X =** Ind Values\n",
+        "\n",
+        "**lin_reg_2.predict(poly_reg.fit_transform(X))** Predicted Dep Values with Polyreg on X\n",
+        " - Reason for lin_reg is to train line on poly_reg stops(taht's why it is curve) read above"
+      ],
+      "metadata": {
+        "id": "5qe8vNLDyIMI"
+      }
     },
     {
       "cell_type": "code",
