--- a/1.Regression/4.Support Vector Regression(SVR)/support_vector_regression.ipynb
+++ b/1.Regression/4.Support Vector Regression(SVR)/support_vector_regression.ipynb
@@ -19,7 +19,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/MuhammadMaazKhan/Machine-Learning/blob/main/Regression/4.Support%20Vector%20Regression(SVR)/support_vector_regression.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/MuhammadMaazKhan/Machine-Learning/blob/main/1.Regression/4.Support%20Vector%20Regression(SVR)/support_vector_regression.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -272,6 +272,50 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Radial Basis Function **(RBF)** Kernel ('rbf')\n",
+        "Most commonly used kernel.\n",
+        "\n",
+        "Handles **complex, non-linear relationships.**\n",
+        "\n",
+        "Formula:\n",
+        "𝐾\n",
+        "(\n",
+        "𝑥\n",
+        ",\n",
+        "𝑥\n",
+        "′\n",
+        ")\n",
+        "=\n",
+        "exp\n",
+        "⁡\n",
+        "(\n",
+        "−\n",
+        "𝛾\n",
+        "∣\n",
+        "∣\n",
+        "𝑥\n",
+        "−\n",
+        "𝑥\n",
+        "′\n",
+        "∣\n",
+        "∣\n",
+        "2\n",
+        ")\n",
+        "\n",
+        "𝛾\n",
+        " controls the influence of a single data point.\n",
+        "\n",
+        "The RBF kernel transforms data into infinite-dimensional space, making it extremely powerful.\n",
+        "\n",
+        "✅ Best for datasets where patterns aren't obvious or linear. (That’s why your code uses kernel = 'rbf'!)"
+      ],
+      "metadata": {
+        "id": "IQ5jDGHo0YBY"
+      }
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "y6R4rt_GRz15",
@@ -315,6 +359,19 @@
       "source": [
         "## Predicting a new result"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**.reshape(-1, 1)** ensures the array is formatted correctly for inverse_transform().\n",
+        "\n",
+        "🔹 **The -1** lets NumPy **automatically determine the number of rows**.\n",
+        "\n",
+        "🔹 **The 1** ensures the output remains a column vector, making it 2D."
+      ],
+      "metadata": {
+        "id": "0vlxEP3q1hO_"
+      }
     },
     {
       "cell_type": "code",
