--- a/1.Regression/5.Decision Tree Regression/decision_tree_regression.ipynb
+++ b/1.Regression/5.Decision Tree Regression/decision_tree_regression.ipynb
@@ -20,7 +20,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/MuhammadMaazKhan/Machine-Learning/blob/main/Regression/5.Decision%20Tree%20Regression/decision_tree_regression.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/MuhammadMaazKhan/Machine-Learning/blob/main/1.Regression/5.Decision%20Tree%20Regression/decision_tree_regression.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -31,6 +31,20 @@
       "source": [
         "# Decision Tree Regression"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "What is **DecisionTreeRegressor?**\n",
+        "It's a machine learning model uses in predicting continuous values (like salaries, prices, etc.).\n",
+        "\n",
+        "Decision trees **don't predict continuous values**—they **create regions** where all values within that region have the same prediction.\n",
+        "\n",
+        "It works by splitting the data into smaller regions based on feature values, creating a tree-like structure."
+      ],
+      "metadata": {
+        "id": "ZWqNDMRU2UiO"
+      }
     },
     {
       "cell_type": "markdown",
@@ -84,6 +98,17 @@
       "source": [
         "## Training the Decision Tree Regression model on the whole dataset"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Setting **random_state = 0** ensures consistent results every time you run the code.\n",
+        "\n",
+        "**Analogy:** Imagine you're baking a cake. If you follow the exact same recipe every time, you'll get the same cake. But if you randomly change ingredients, the outcome will vary. **random_state = 0** ensures the \"recipe\" stays the same!"
+      ],
+      "metadata": {
+        "id": "0OeBJ9Xn2hIU"
+      }
     },
     {
       "cell_type": "code",
@@ -167,6 +192,36 @@
       "source": [
         "## Visualising the Decision Tree Regression results (higher resolution)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Decision trees **don't predict continuous values**—they **create regions** where all values within that region have the same prediction.\n",
+        "\n",
+        "So if you plot it using only X, the graph might look blocky. To make the curve smoother, we generate **X_grid**, which contains more finely spaced values, leading to a better visualization.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "9CcLkJNf3Npa"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**np.arange(min(X), max(X), 0.01)** creates an array of values from the minimum to the maximum value of X, increasing in steps of 0.01.\n",
+        "\n",
+        "**Example:** If X = [1, 2, 3, 4, 5], np.arange(1, 5, 0.01) creates many small steps between 1 and 5, like:\n",
+        "[1.00, 1.01, 1.02, ..., 4.98, 4.99, 5.00]\n",
+        "\n",
+        "**reshape((len(X_grid), 1))** converts X_grid into a **2D array** (because **regressor.predict()** expects a 2D input).Now X_grid looks like\n",
+        "[[1.00], [1.01], [1.02], ..., [4.99], [5.00]]\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "uz-gnfDj3izw"
+      }
     },
     {
       "cell_type": "code",
