--- a/1.Regression/6.Random Forest Regression/random_forest_regression.ipynb
+++ b/1.Regression/6.Random Forest Regression/random_forest_regression.ipynb
@@ -20,7 +20,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/MuhammadMaazKhan/Machine-Learning/blob/main/Regression/6.Random%20Forest%20Regression/random_forest_regression.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/MuhammadMaazKhan/Machine-Learning/blob/main/1.Regression/6.Random%20Forest%20Regression/random_forest_regression.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -84,6 +84,19 @@
       "source": [
         "## Training the Random Forest Regression model on the whole dataset"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**n_estimators = 10** This defines the number of trees in the forest.\n",
+        "\n",
+        "A higher number of trees generally improves accuracy but increases computation time.\n",
+        "\n",
+        "**Analogy:** Imagine you're asking 10 experts for advice instead of just one. The final decision is based on their collective wisdom!"
+      ],
+      "metadata": {
+        "id": "jIoschDY4pxQ"
+      }
     },
     {
       "cell_type": "code",
@@ -168,6 +181,17 @@
       "source": [
         "## Visualising the Random Forest Regression results (higher resolution)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Grid concept** is same as Decision tree because Decision trees don't predict continuous values—they create regions where all values within that region have the same prediction. So if you plot it using only X, the graph might look blocky. To make the curve smoother, we generate X_grid, which contains more finely spaced values, leading to a better visualization.\n",
+        "\n",
+        "**reshape((len(X_grid), 1))** converts X_grid into a **2D array** (because regressor.predict() expects a 2D input)."
+      ],
+      "metadata": {
+        "id": "Ei7HxiFV43yb"
+      }
     },
     {
       "cell_type": "code",
